<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/quit_menu_item"
        android:showAsAction="ifRoom|withText"
        android:title="@string/quit_menu_title" />

    <item android:id="@+id/settings_menu_item"
          android:showAsAction="ifRoom"
        android:title="@string/settings_title" />

    <item android:id="@+id/server_menu"
        android:title="@string/server_menu" >
       <menu>
            <item android:id="@+id/ping_server_menu_item"
                android:title="@string/ping_server_menu_item" />

            <item android:id="@+id/server_menu_item"
                android:title="@string/server_menu_title" />
       </menu>
    </item>

    <item android:id="@+id/tools_menu"
        android:title="@string/tools_menu" >
        <menu>
            <item android:id="@+id/view_public_code_menu_item"
                android:title="@string/view_public_code_menu_item" />

            <item android:id="@+id/email_mpi_menu_item"
                android:title="@string/send_public_account_id_menu_item" />

            <item android:id="@+id/export_mpi_menu_item"
                android:title="@string/export_public_account_id_menu_item" />

            <item android:id="@+id/reset_install_menu_item"
                android:title="@string/reset_to_install" />
        </menu>
    </item>

    <item android:id="@+id/help_menu"
        android:title="@string/help_menu" >
        <menu>


            <item android:id="@+id/feedback_menu_item"
                android:title="@string/feedback_menu" />

            <item android:id="@+id/show_version_menu_item"
                android:title="@string/show_version" />
        </menu>
    </item>

</menu>

