<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
                
    <PreferenceCategory
            android:title="@string/user_preferences">

        <ListPreference
                android:key="timeout_preference"
                android:defaultValue="7"
                android:title="@string/title_timeout_preference"
                android:summary="@string/summary_timeout_preference"
                android:entries="@array/entries_timeout_preference"
                android:entryValues="@array/values_timeout_preference"
                android:dialogTitle="@string/dialog_title_timeout_preference" />

        <EditTextPreference
                android:key="author_preference"
                android:title="@string/title_author_preference"
                android:summary="@string/summary_author_preference"
                android:dialogTitle="@string/dialog_title_author_preference" />
                
        <ListPreference
                android:key="language_preference"
                android:title="@string/title_language_preference"
                android:summary="@string/summary_language_preference"
                android:entries="@array/entries_language_preference"
                android:entryValues="@array/values_language_preference"
                android:dialogTitle="@string/dialog_title_language_preference" />

    </PreferenceCategory>

</PreferenceScreen>

