<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
            android:text="@string/server_ip_label"
            android:layout_marginTop="20dip"
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_width="wrap_content"/>

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:scrollHorizontally="true"
            android:inputType="text"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:hint="@string/server_ip_hint"
            android:imeOptions="actionNext"
            android:id="@+id/serverIpText"/>

    <TextView
            android:text="@string/server_public_code_label"
            android:layout_marginTop="20dip"
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_width="wrap_content"/>

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:scrollHorizontally="true"
            android:inputType="text"
            android:capitalize="none"
            android:gravity="fill_horizontal"
            android:hint="@string/server_public_code_hint"
            android:imeOptions="actionDone"
            android:id="@+id/serverCodeText"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_marginRight="20dip"
            android:layout_gravity="right"
            android:onClick="confirmServer"
            android:text="@string/alert_dialog_ok"
            android:contentDescription="@string/alert_dialog_ok"
            android:id="@+id/serverCodeEnter"/>
</LinearLayout>